Add ajax for the feedback form

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 							
 							<h3>Напишите мне</h3>
 							
-							<form action="https://formspree.io/jhubz-work@list.ru" method="POST">
+							<form id="contact-form" action="https://formspree.io/jhubz-work@list.ru" method="POST">
 								<input type="text" class="feedback-input" name="name" id="name-id" placeholder="Ваше имя" required>
 								<input type="email" class="feedback-input" name="email" id="email-id" placeholder="Ваша почта" required>
 								<textarea class="feedback-input" name="text" id="text-id" rows="6" cols="40" placeholder="Ваше сообщение&hellip;" required></textarea>
@@ -180,6 +180,7 @@
 		
 		<script src="js/jquery-3.1.0.min.js"></script>
 		<script src="js/script.js"></script>
+		<script src="js/formspree.js"></script>
 
 	</body>
 	
