--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<meta charset="utf-8">
 		<title>Суходолов Александр - Портфолио</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/normalize.min.css">
+		<link rel="stylesheet" href="css/style.min.css">
 	</head>
 	
 	<body>
@@ -138,7 +138,6 @@
 								<input type="email" class="feedback-input" name="email" id="email-id" placeholder="Ваша почта" required>
 								<textarea class="feedback-input" name="text" id="text-id" rows="6" cols="40" placeholder="Ваше сообщение&hellip;" required></textarea>
 								
-								<!--<input type="hidden" name="_next" value="/*Вставить адрес страницы, на которую ссылается submit*/">-->
 								<input type="hidden" name="_subject" value="Письмо из портфолио!">
 								<input type="hidden" name="_gotcha" style="display:none">
 								
@@ -179,8 +178,8 @@
 		</div>
 		
 		<script src="js/jquery-3.1.0.min.js"></script>
-		<script src="js/script.js"></script>
-		<script src="js/formspree.js"></script>
+		<script src="js/script.min.js"></script>
+		<script src="js/formspree.min.js"></script>
 
 	</body>
 	
